--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <type>maven-plugin</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
+
     </dependencies>
 
 </project>
