--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <version>3.2.0</version>
             <type>maven-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version>
+        </dependency>
     </dependencies>
 
 </project>
