--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ local.properties
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
 .idea/workspace.xml
+.idea/workspace.xml
