--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,35 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+
+    <build>
+        <plugins>
+          <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>driver.Main</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-runnable-jar</id> 
+            <phase>package</phase> 
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+    </build>
+      
+
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
